# HexaServer

./: .gitignore  LICENSE  README.md  info.txt
HexaProtocols/HexaProtocolBase/: Cargo.toml
HexaProtocols/HexaProtocolBase/src/: lib.rs  packet_builder.rs  packet_reader.rs
HexaProtocols/HexaProtocolBase/src/chunk/: chunk_encoder_decoder.rs
HexaProtocols/HexaProtocolBase/src/packets/: packet.rs
HexaProtocols/HexaProtocolBase/src/player/: hand.rs
HexaProtocols/HexaProtocol_1_21/: Cargo.toml  go.mod  go.sum
HexaProtocols/HexaProtocol_1_21/entities/: entity_type.go
HexaProtocols/HexaProtocol_1_21/entities/tick/: entity_ticking.go
HexaProtocols/HexaProtocol_1_21/packets/: configuration_state_reader_1_21.go  login_state_reader_1_21.go  packet_1_21.go  packet_reader_1_21.go  play_state_reader_1_21.go  status_state_reader_1_21.go
HexaProtocols/HexaProtocol_1_21/packets/clientbound/: chunk_data_and_update_light_packet_1_21.go  clientbound_known_packs_1_21.go  clientbound_plugin_message_configuration_packet_1_21.go  disconnect_play_packet_1_21.go  finish_configuration_packet_1_21.go  game_event_packet_1_21.go  keep_alive_play_packet_1_21.go  login_packet_1_21.go  login_success_packet_1_21.go  player_info_update_packet_1_21.go  pong_response_packet_1_21.go  registry_data_packet_1_21.go  set_center_chunk_packet_1_21.go  status_response_packet_1_21.go  synchronize_player_position_packet_1_21.go  system_chat_message_packet_1_21.go
HexaProtocols/HexaProtocol_1_21/protocol/: hexa_protocol_1_21.go
HexaProtocols/HexaProtocol_1_21/src/: hexa_protocol_1_21.rs  lib.rs
HexaServer/: Cargo.toml  go.mod
HexaServer/entities/: entity.go
HexaServer/entities/manager/: entity_manager.go
HexaServer/entities/player/: player.go
HexaServer/packet/: player_packet_reader.go
HexaServer/server/: server.go
HexaServer/src/: hexa_server.rs  lib.rs  monitor.rs  player_connection.rs  protocol_thread.rs  server_config.rs
HexaServer/src/entity/: entity.rs  entity_processor.rs
HexaServer/src/packet/: packet_buffer.rs
HexaServer/src/packets_handler/handshake_handler/: handshake.rs  (+3 more)
HexaServer/src/player/: game_mode.rs  player.rs  player_connection.rs
HexaServer/src/server/: server_process.rs
HexaTest/: Cargo.toml  blocks.json  debug.txt  go.mod  go.sum  main.go  needed_blocks.txt
HexaTest/src/: HexaTest.rs
(+140 files in other folders)
