[package]
name = "hexa_protocol_base"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
uuid = "1.5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rayon = "1.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crab_nbt = "0.2.2"
reqwest = { version = "0.12.7", features = ["blocking"] }
base64 = "0.22.1"

[lib]
path = "src/lib.rs"
